# advent2023

./: .gitignore  Cargo.toml
data/: d09minus.txt
src/: main.rs
src/advent/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d20_learn_traits.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs  util.rs
src/advent/util/: debug.rs  grid.rs  grid3d.rs  math.rs  mod.rs  parse.rs
