[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"
authors = ["efhd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
clap = { version = "4.4.10", features = ["derive"] }
nom = "7.1.3"
num-traits = "0.2.17"
