[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"
authors = ["efhd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = [
  "animation",
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "ktx2",
  "multi-threaded",
  "png",
  "tonemapping_luts",
  "x11",
  "zstd",
] }
bevy_panorbit_camera = "0.9.2"
bitflags = "2.4.1"
clap = { version = "4.4.10", features = ["derive"] }
nalgebra = "0.32.3"
nom = "7.1.3"
num-traits = "0.2.17"
